2007-12-31  Olav Vitters  <olav@bkor.dhs.org>

	* schedule/libschedule.py: Add summary and description functions to
	GnomeReleaseEvent. Summary is a quick overview for usage in e.g. the
	subject of an email. Description provides full information about an
	event. E.g. that the tarballs should be released before 23:59 UTC,
	etc. The description texts need more work.
	* schedule/ical.py: Initial attempt at making an ical file. The alarms
	don't work with Evolution yet. This requires the 'vobject' and
	'dateutils' Python modules.

2007-12-30  Olav Vitters  <olav@bkor.dhs.org>

	* schedule/libschedule.py: Add wiki_text function which gives a wiki
	text representation of a specific event.
	* schedule/wiki.py: Add colouring for notes. Vertically align dates
	and week numbers to the top.

2007-12-30  Olav Vitters  <olav@bkor.dhs.org>

	* schedule/libschedule.py: Add new category, 'tarball'. Pretend every
	time there is a 'release' that it is an tarball due event and the
	actual release is two days later. Further, add a wiki_text method to
	return appropriate text for the wiki layout.
	* schedule/wiki.py: Totally rewrite this thing. Doesn't complete work
	mostly due to wiki_text not giving a good text representation.

2007-12-30  Olav Vitters  <olav@bkor.dhs.org>

	* schedule/libschedule.py: Change the schedule format to be a bit more
	'free'. Further, add version information to the file.
	* schedule/2.22.schedule: Update schedule per code changes.

2007-12-30  Olav Vitters  <olav@bkor.dhs.org>

	* schedule/2.22.schedule:
	* schedule/automail.py:
	* schedule/2.22.wiki:
	* schedule/ical.py:
	* schedule/test.wiki:
	* schedule/wiki.py:
	* schedule/libschedule.py:
	* schedule/templates:
	* schedule/templates/release-unstable:

	Add vuntz schedule scripts to SVN so I can properly hack it into submission.

2007-12-28  Olav Vitters  <olav@bkor.dhs.org>

	* smoketesting/convert-to-tarballs.py: Warn when there is a revision